parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> statement
Rule 2     statement -> conditional statement
Rule 3     statement -> while statement
Rule 4     statement -> declare ; statement
Rule 5     statement -> print ; statement
Rule 6     statement -> none
Rule 7     none -> <empty>
Rule 8     conditional -> if elif else
Rule 9     if -> IF ( expression ) { statement }
Rule 10    elif -> ELIF ( expression ) { statement } elif
Rule 11    elif -> none
Rule 12    else -> ELSE { statement }
Rule 13    else -> none
Rule 14    while -> WHILE ( expression ) { statement }
Rule 15    type -> INT
Rule 16    type -> FLOAT
Rule 17    type -> STRING
Rule 18    type -> BOOLEAN
Rule 19    declare -> declaration
Rule 20    declare -> declarationAssign
Rule 21    declare -> declareAssign
Rule 22    declaration -> type ID
Rule 23    declarationAssign -> type ID = expression
Rule 24    declareAssign -> ID = expression
Rule 25    print -> PRINT expression
Rule 26    expression -> expression + expression
Rule 27    expression -> expression - expression
Rule 28    expression -> expression * expression
Rule 29    expression -> expression / expression
Rule 30    expression -> expression ^ expression
Rule 31    expression -> expression > expression
Rule 32    expression -> expression < expression
Rule 33    expression -> expression AND expression
Rule 34    expression -> expression OR expression
Rule 35    expression -> expression EQC expression
Rule 36    expression -> expression NOTEQC expression
Rule 37    expression -> expression BIGGEREQ expression
Rule 38    expression -> expression SMALLEREQ expression
Rule 39    expression -> - expression
Rule 40    expression -> ( expression )
Rule 41    expression -> INTV
Rule 42    expression -> FLOATV
Rule 43    expression -> STRINGV
Rule 44    expression -> boolval
Rule 45    boolval -> TRUE
Rule 46    boolval -> FALSE
Rule 47    expression -> ID

Terminals, with rules where they appear

(                    : 9 10 14 40
)                    : 9 10 14 40
*                    : 28
+                    : 26
-                    : 27 39
/                    : 29
;                    : 4 5
<                    : 32
=                    : 23 24
>                    : 31
AND                  : 33
BIGGEREQ             : 37
BOOLEAN              : 18
ELIF                 : 10
ELSE                 : 12
EQC                  : 35
FALSE                : 46
FLOAT                : 16
FLOATV               : 42
ID                   : 22 23 24 47
IF                   : 9
INT                  : 15
INTV                 : 41
NOTEQC               : 36
OR                   : 34
PRINT                : 25
SMALLEREQ            : 38
STRING               : 17
STRINGV              : 43
TRUE                 : 45
WHILE                : 14
^                    : 30
error                : 
{                    : 9 10 12 14
}                    : 9 10 12 14

Nonterminals, with rules where they appear

boolval              : 44
conditional          : 2
declaration          : 19
declarationAssign    : 20
declare              : 4
declareAssign        : 21
elif                 : 8 10
else                 : 8
expression           : 9 10 14 23 24 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40
if                   : 8
none                 : 6 11 13
print                : 5
prog                 : 0
statement            : 1 2 3 4 5 9 10 12 14
type                 : 22 23
while                : 3

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . statement
    (2) statement -> . conditional statement
    (3) statement -> . while statement
    (4) statement -> . declare ; statement
    (5) statement -> . print ; statement
    (6) statement -> . none
    (8) conditional -> . if elif else
    (14) while -> . WHILE ( expression ) { statement }
    (19) declare -> . declaration
    (20) declare -> . declarationAssign
    (21) declare -> . declareAssign
    (25) print -> . PRINT expression
    (7) none -> .
    (9) if -> . IF ( expression ) { statement }
    (22) declaration -> . type ID
    (23) declarationAssign -> . type ID = expression
    (24) declareAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOLEAN

    WHILE           shift and go to state 9
    PRINT           shift and go to state 13
    $end            reduce using rule 7 (none -> .)
    IF              shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20

    prog                           shift and go to state 1
    statement                      shift and go to state 2
    conditional                    shift and go to state 3
    while                          shift and go to state 4
    declare                        shift and go to state 5
    print                          shift and go to state 6
    none                           shift and go to state 7
    if                             shift and go to state 8
    declaration                    shift and go to state 10
    declarationAssign              shift and go to state 11
    declareAssign                  shift and go to state 12
    type                           shift and go to state 15

state 1

    (0) S' -> prog .



state 2

    (1) prog -> statement .

    $end            reduce using rule 1 (prog -> statement .)


state 3

    (2) statement -> conditional . statement
    (2) statement -> . conditional statement
    (3) statement -> . while statement
    (4) statement -> . declare ; statement
    (5) statement -> . print ; statement
    (6) statement -> . none
    (8) conditional -> . if elif else
    (14) while -> . WHILE ( expression ) { statement }
    (19) declare -> . declaration
    (20) declare -> . declarationAssign
    (21) declare -> . declareAssign
    (25) print -> . PRINT expression
    (7) none -> .
    (9) if -> . IF ( expression ) { statement }
    (22) declaration -> . type ID
    (23) declarationAssign -> . type ID = expression
    (24) declareAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOLEAN

    WHILE           shift and go to state 9
    PRINT           shift and go to state 13
    $end            reduce using rule 7 (none -> .)
    }               reduce using rule 7 (none -> .)
    IF              shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20

    conditional                    shift and go to state 3
    statement                      shift and go to state 21
    while                          shift and go to state 4
    declare                        shift and go to state 5
    print                          shift and go to state 6
    none                           shift and go to state 7
    if                             shift and go to state 8
    declaration                    shift and go to state 10
    declarationAssign              shift and go to state 11
    declareAssign                  shift and go to state 12
    type                           shift and go to state 15

state 4

    (3) statement -> while . statement
    (2) statement -> . conditional statement
    (3) statement -> . while statement
    (4) statement -> . declare ; statement
    (5) statement -> . print ; statement
    (6) statement -> . none
    (8) conditional -> . if elif else
    (14) while -> . WHILE ( expression ) { statement }
    (19) declare -> . declaration
    (20) declare -> . declarationAssign
    (21) declare -> . declareAssign
    (25) print -> . PRINT expression
    (7) none -> .
    (9) if -> . IF ( expression ) { statement }
    (22) declaration -> . type ID
    (23) declarationAssign -> . type ID = expression
    (24) declareAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOLEAN

    WHILE           shift and go to state 9
    PRINT           shift and go to state 13
    $end            reduce using rule 7 (none -> .)
    }               reduce using rule 7 (none -> .)
    IF              shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20

    while                          shift and go to state 4
    statement                      shift and go to state 22
    conditional                    shift and go to state 3
    declare                        shift and go to state 5
    print                          shift and go to state 6
    none                           shift and go to state 7
    if                             shift and go to state 8
    declaration                    shift and go to state 10
    declarationAssign              shift and go to state 11
    declareAssign                  shift and go to state 12
    type                           shift and go to state 15

state 5

    (4) statement -> declare . ; statement

    ;               shift and go to state 23


state 6

    (5) statement -> print . ; statement

    ;               shift and go to state 24


state 7

    (6) statement -> none .

    $end            reduce using rule 6 (statement -> none .)
    }               reduce using rule 6 (statement -> none .)


state 8

    (8) conditional -> if . elif else
    (10) elif -> . ELIF ( expression ) { statement } elif
    (11) elif -> . none
    (7) none -> .

    ELIF            shift and go to state 26
    ELSE            reduce using rule 7 (none -> .)
    WHILE           reduce using rule 7 (none -> .)
    PRINT           reduce using rule 7 (none -> .)
    IF              reduce using rule 7 (none -> .)
    ID              reduce using rule 7 (none -> .)
    INT             reduce using rule 7 (none -> .)
    FLOAT           reduce using rule 7 (none -> .)
    STRING          reduce using rule 7 (none -> .)
    BOOLEAN         reduce using rule 7 (none -> .)
    $end            reduce using rule 7 (none -> .)
    }               reduce using rule 7 (none -> .)

    elif                           shift and go to state 25
    none                           shift and go to state 27

state 9

    (14) while -> WHILE . ( expression ) { statement }

    (               shift and go to state 28


state 10

    (19) declare -> declaration .

    ;               reduce using rule 19 (declare -> declaration .)


state 11

    (20) declare -> declarationAssign .

    ;               reduce using rule 20 (declare -> declarationAssign .)


state 12

    (21) declare -> declareAssign .

    ;               reduce using rule 21 (declare -> declareAssign .)


state 13

    (25) print -> PRINT . expression
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression > expression
    (32) expression -> . expression < expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQC expression
    (36) expression -> . expression NOTEQC expression
    (37) expression -> . expression BIGGEREQ expression
    (38) expression -> . expression SMALLEREQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTV
    (42) expression -> . FLOATV
    (43) expression -> . STRINGV
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTV            shift and go to state 32
    FLOATV          shift and go to state 33
    STRINGV         shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 29
    boolval                        shift and go to state 35

state 14

    (9) if -> IF . ( expression ) { statement }

    (               shift and go to state 39


state 15

    (22) declaration -> type . ID
    (23) declarationAssign -> type . ID = expression

    ID              shift and go to state 40


state 16

    (24) declareAssign -> ID . = expression

    =               shift and go to state 41


state 17

    (15) type -> INT .

    ID              reduce using rule 15 (type -> INT .)


state 18

    (16) type -> FLOAT .

    ID              reduce using rule 16 (type -> FLOAT .)


state 19

    (17) type -> STRING .

    ID              reduce using rule 17 (type -> STRING .)


state 20

    (18) type -> BOOLEAN .

    ID              reduce using rule 18 (type -> BOOLEAN .)


state 21

    (2) statement -> conditional statement .

    $end            reduce using rule 2 (statement -> conditional statement .)
    }               reduce using rule 2 (statement -> conditional statement .)


state 22

    (3) statement -> while statement .

    $end            reduce using rule 3 (statement -> while statement .)
    }               reduce using rule 3 (statement -> while statement .)


state 23

    (4) statement -> declare ; . statement
    (2) statement -> . conditional statement
    (3) statement -> . while statement
    (4) statement -> . declare ; statement
    (5) statement -> . print ; statement
    (6) statement -> . none
    (8) conditional -> . if elif else
    (14) while -> . WHILE ( expression ) { statement }
    (19) declare -> . declaration
    (20) declare -> . declarationAssign
    (21) declare -> . declareAssign
    (25) print -> . PRINT expression
    (7) none -> .
    (9) if -> . IF ( expression ) { statement }
    (22) declaration -> . type ID
    (23) declarationAssign -> . type ID = expression
    (24) declareAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOLEAN

    WHILE           shift and go to state 9
    PRINT           shift and go to state 13
    $end            reduce using rule 7 (none -> .)
    }               reduce using rule 7 (none -> .)
    IF              shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20

    declare                        shift and go to state 5
    statement                      shift and go to state 42
    conditional                    shift and go to state 3
    while                          shift and go to state 4
    print                          shift and go to state 6
    none                           shift and go to state 7
    if                             shift and go to state 8
    declaration                    shift and go to state 10
    declarationAssign              shift and go to state 11
    declareAssign                  shift and go to state 12
    type                           shift and go to state 15

state 24

    (5) statement -> print ; . statement
    (2) statement -> . conditional statement
    (3) statement -> . while statement
    (4) statement -> . declare ; statement
    (5) statement -> . print ; statement
    (6) statement -> . none
    (8) conditional -> . if elif else
    (14) while -> . WHILE ( expression ) { statement }
    (19) declare -> . declaration
    (20) declare -> . declarationAssign
    (21) declare -> . declareAssign
    (25) print -> . PRINT expression
    (7) none -> .
    (9) if -> . IF ( expression ) { statement }
    (22) declaration -> . type ID
    (23) declarationAssign -> . type ID = expression
    (24) declareAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOLEAN

    WHILE           shift and go to state 9
    PRINT           shift and go to state 13
    $end            reduce using rule 7 (none -> .)
    }               reduce using rule 7 (none -> .)
    IF              shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20

    print                          shift and go to state 6
    statement                      shift and go to state 43
    conditional                    shift and go to state 3
    while                          shift and go to state 4
    declare                        shift and go to state 5
    none                           shift and go to state 7
    if                             shift and go to state 8
    declaration                    shift and go to state 10
    declarationAssign              shift and go to state 11
    declareAssign                  shift and go to state 12
    type                           shift and go to state 15

state 25

    (8) conditional -> if elif . else
    (12) else -> . ELSE { statement }
    (13) else -> . none
    (7) none -> .

    ELSE            shift and go to state 45
    WHILE           reduce using rule 7 (none -> .)
    PRINT           reduce using rule 7 (none -> .)
    IF              reduce using rule 7 (none -> .)
    ID              reduce using rule 7 (none -> .)
    INT             reduce using rule 7 (none -> .)
    FLOAT           reduce using rule 7 (none -> .)
    STRING          reduce using rule 7 (none -> .)
    BOOLEAN         reduce using rule 7 (none -> .)
    $end            reduce using rule 7 (none -> .)
    }               reduce using rule 7 (none -> .)

    else                           shift and go to state 44
    none                           shift and go to state 46

state 26

    (10) elif -> ELIF . ( expression ) { statement } elif

    (               shift and go to state 47


state 27

    (11) elif -> none .

    ELSE            reduce using rule 11 (elif -> none .)
    WHILE           reduce using rule 11 (elif -> none .)
    PRINT           reduce using rule 11 (elif -> none .)
    IF              reduce using rule 11 (elif -> none .)
    ID              reduce using rule 11 (elif -> none .)
    INT             reduce using rule 11 (elif -> none .)
    FLOAT           reduce using rule 11 (elif -> none .)
    STRING          reduce using rule 11 (elif -> none .)
    BOOLEAN         reduce using rule 11 (elif -> none .)
    $end            reduce using rule 11 (elif -> none .)
    }               reduce using rule 11 (elif -> none .)


state 28

    (14) while -> WHILE ( . expression ) { statement }
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression > expression
    (32) expression -> . expression < expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQC expression
    (36) expression -> . expression NOTEQC expression
    (37) expression -> . expression BIGGEREQ expression
    (38) expression -> . expression SMALLEREQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTV
    (42) expression -> . FLOATV
    (43) expression -> . STRINGV
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTV            shift and go to state 32
    FLOATV          shift and go to state 33
    STRINGV         shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 48
    boolval                        shift and go to state 35

state 29

    (25) print -> PRINT expression .
    (26) expression -> expression . + expression
    (27) expression -> expression . - expression
    (28) expression -> expression . * expression
    (29) expression -> expression . / expression
    (30) expression -> expression . ^ expression
    (31) expression -> expression . > expression
    (32) expression -> expression . < expression
    (33) expression -> expression . AND expression
    (34) expression -> expression . OR expression
    (35) expression -> expression . EQC expression
    (36) expression -> expression . NOTEQC expression
    (37) expression -> expression . BIGGEREQ expression
    (38) expression -> expression . SMALLEREQ expression

    ;               reduce using rule 25 (print -> PRINT expression .)
    +               shift and go to state 49
    -               shift and go to state 50
    *               shift and go to state 51
    /               shift and go to state 52
    ^               shift and go to state 53
    >               shift and go to state 54
    <               shift and go to state 55
    AND             shift and go to state 56
    OR              shift and go to state 57
    EQC             shift and go to state 58
    NOTEQC          shift and go to state 59
    BIGGEREQ        shift and go to state 60
    SMALLEREQ       shift and go to state 61


state 30

    (39) expression -> - . expression
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression > expression
    (32) expression -> . expression < expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQC expression
    (36) expression -> . expression NOTEQC expression
    (37) expression -> . expression BIGGEREQ expression
    (38) expression -> . expression SMALLEREQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTV
    (42) expression -> . FLOATV
    (43) expression -> . STRINGV
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTV            shift and go to state 32
    FLOATV          shift and go to state 33
    STRINGV         shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 62
    boolval                        shift and go to state 35

state 31

    (40) expression -> ( . expression )
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression > expression
    (32) expression -> . expression < expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQC expression
    (36) expression -> . expression NOTEQC expression
    (37) expression -> . expression BIGGEREQ expression
    (38) expression -> . expression SMALLEREQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTV
    (42) expression -> . FLOATV
    (43) expression -> . STRINGV
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTV            shift and go to state 32
    FLOATV          shift and go to state 33
    STRINGV         shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 63
    boolval                        shift and go to state 35

state 32

    (41) expression -> INTV .

    +               reduce using rule 41 (expression -> INTV .)
    -               reduce using rule 41 (expression -> INTV .)
    *               reduce using rule 41 (expression -> INTV .)
    /               reduce using rule 41 (expression -> INTV .)
    ^               reduce using rule 41 (expression -> INTV .)
    >               reduce using rule 41 (expression -> INTV .)
    <               reduce using rule 41 (expression -> INTV .)
    AND             reduce using rule 41 (expression -> INTV .)
    OR              reduce using rule 41 (expression -> INTV .)
    EQC             reduce using rule 41 (expression -> INTV .)
    NOTEQC          reduce using rule 41 (expression -> INTV .)
    BIGGEREQ        reduce using rule 41 (expression -> INTV .)
    SMALLEREQ       reduce using rule 41 (expression -> INTV .)
    ;               reduce using rule 41 (expression -> INTV .)
    )               reduce using rule 41 (expression -> INTV .)


state 33

    (42) expression -> FLOATV .

    +               reduce using rule 42 (expression -> FLOATV .)
    -               reduce using rule 42 (expression -> FLOATV .)
    *               reduce using rule 42 (expression -> FLOATV .)
    /               reduce using rule 42 (expression -> FLOATV .)
    ^               reduce using rule 42 (expression -> FLOATV .)
    >               reduce using rule 42 (expression -> FLOATV .)
    <               reduce using rule 42 (expression -> FLOATV .)
    AND             reduce using rule 42 (expression -> FLOATV .)
    OR              reduce using rule 42 (expression -> FLOATV .)
    EQC             reduce using rule 42 (expression -> FLOATV .)
    NOTEQC          reduce using rule 42 (expression -> FLOATV .)
    BIGGEREQ        reduce using rule 42 (expression -> FLOATV .)
    SMALLEREQ       reduce using rule 42 (expression -> FLOATV .)
    ;               reduce using rule 42 (expression -> FLOATV .)
    )               reduce using rule 42 (expression -> FLOATV .)


state 34

    (43) expression -> STRINGV .

    +               reduce using rule 43 (expression -> STRINGV .)
    -               reduce using rule 43 (expression -> STRINGV .)
    *               reduce using rule 43 (expression -> STRINGV .)
    /               reduce using rule 43 (expression -> STRINGV .)
    ^               reduce using rule 43 (expression -> STRINGV .)
    >               reduce using rule 43 (expression -> STRINGV .)
    <               reduce using rule 43 (expression -> STRINGV .)
    AND             reduce using rule 43 (expression -> STRINGV .)
    OR              reduce using rule 43 (expression -> STRINGV .)
    EQC             reduce using rule 43 (expression -> STRINGV .)
    NOTEQC          reduce using rule 43 (expression -> STRINGV .)
    BIGGEREQ        reduce using rule 43 (expression -> STRINGV .)
    SMALLEREQ       reduce using rule 43 (expression -> STRINGV .)
    ;               reduce using rule 43 (expression -> STRINGV .)
    )               reduce using rule 43 (expression -> STRINGV .)


state 35

    (44) expression -> boolval .
